# tauri-plugin-keystore

./: Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yaml  publish-dry-run.yaml  publish.yaml  release-dry-run.yaml  release.yaml
android/: .gitignore  README.md  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  KeystorePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  KeystorePlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
