[package]
name = "tauri-plugin-keystore"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keystore"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
keyring = { version = "3", features = ["apple-native"] }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
