[package]
name = "tauri-plugin-keystore"
version = "0.0.0-semantically-released"
authors = ["daniel-mader"]
description = "Interact with the device-native key storage (Android Keystore, iOS Keychain)."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keystore"
repository = "https://github.com/impierce/tauri-plugin-keystore"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
keyring = { version = "3", features = ["apple-native"] }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
